@@ -375,13 +375,16 @@ COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.1
   work with Initial Developer and Contributors to distribute such
   responsibility on an equitable basis. Nothing herein is intended or
   shall be deemed to constitute any admission of liability.
+
 NOTICE PURSUANT TO SECTION 9 OF THE COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL)
+
 The code released under the CDDL shall be governed by the laws of the
 State of California (excluding conflict-of-law provisions). Any
 litigation relating to this License shall be subject to the jurisdiction
 of the Federal Courts of the Northern District of California and the
 state courts of the State of California, with venue lying in Santa Clara
 County, California.
+
 The GNU General Public License (GPL) Version 2, June 1991
 Copyright (C) 1989, 1991 Free Software Foundation, Inc.
 51 Franklin Street, Fifth Floor
