@@ -36,7 +36,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <dl4j.version>1.0.0-beta2</dl4j.version>
+    <dl4j.version>1.0.0-beta3</dl4j.version>
   </properties>
 
   <dependencies>
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
-      <version>3.4.1</version>
+      <version>3.6.1</version>
     </dependency>
     <dependency>
       <groupId>org.deeplearning4j</groupId>
@@ -164,6 +164,10 @@
         <exclusion>
           <groupId>commons-io</groupId>
           <artifactId>commons-io</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>net.java.dev.jna</groupId>
+          <artifactId>jna</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -240,7 +244,7 @@
     <dependency>
       <groupId>org.objenesis</groupId>
       <artifactId>objenesis</artifactId>
-      <version>2.6</version>
+      <version>3.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.nd4j</groupId>
@@ -299,7 +303,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.16.22</version>
+      <version>1.18.4</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -309,7 +313,7 @@
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
-      <version>2.9.2</version>
+      <version>2.10.1</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
