@@ -39,7 +39,7 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
-      <version>4.0.0</version>
+      <version>${osgi.core.version}</version>
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
